2001-08-17  Scott S. Goodwin  <scott@scottg.net>

	* nsopenssl.h: defined version for OpenSSL 0.9.6b.

        * https.tcl: made rqset the second to last arg passed to
        ns_httpsget.

2001-08-16  Scott S. Goodwin  <scott@scottg.net>

        * init.c: turned on the peerVerify code for SSL sock server and
        sock clients (as opposed to NSD-driven conns). Need to test.

        * tclcmds.c: was using an interp before it was allocated. Pretty
        amazing. Adam Zell pointed this out.

        * init.c: boneheadedly #if 0'd out the client cert verification
        code for NSD-driven conns. Works now. Sean Yamamoto noticed the
        problem.

        * init.c: should have been initializin sdPtr->randomFile *before*
        calling SeedPRNG. Also should have been freeing randomFile when
        freein the driver. Thanks to Adam Zell for pointing these out.

2001-08-15  Scott S. Goodwin  <scott@scottg.net>

        * https.tcl: add the rqset parameter to ns_httpsget so that
        cookies can be used.

2001-08-09  Scott S. Goodwin  <scott@scottg.net>

	* nsopenssl 2.0 released.

	* tests: tested with OpenSSL 0.9.6a Solaris.

	* tests: tested with OpenSSL 0.9.6, 0.9.6a and 0.9.6b on Linux.

	* ssl.c: Had to return to the non-BIO method of running the SSL
	server handshake. Solaris *hates* the BIO method. Where normally
	it'll try to read the client cert twice (even if you've told it
	not to ask for a client cert!), with the BIO method, it attempts
	to read the client cert up to 60 times!

2001-08-08  Scott S. Goodwin  <scott@scottg.net>

	* init.c: the OpenSSL PRNG is now seeded at start time when
        NsOpenSSLCreateDriver is run. This will have no effect on Linux,
        but it will hopefully ease the pain of Solaris and other users.

	* docs: go see http://scottg.net for the new documentation on
	nsopenssl.

	* All: added ns_openssl_sock* commands and C API. The C API isn't
	ready for prime time, and there's more work to do on how the Tcl